--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="index.html">
-              <img src="/img/logo.png" alt="Logo">
+              <img src="/img/logo_draft.png" alt="Logo">
             </a>
           </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
